test/should-fail/jfxc683a.visage
/*
 * Regression test: JFXC-683: Use Visage type name rather than Java type names in error messages
 *
 * @test/compile-error
 *
 * This should produce:
 *
 *     jfxc683a.visage:38: incompatible types
 *     found   : jfxc683a.Node[]
 *     required: jfxc683a.Node
 *         content: [Node {}]
 *                  ^
 *     1 error
 * 
 * instead of
 * 
 *     jfxc683a.visage:38: incompatible types
 *     found   : org.visage.runtime.sequence.Sequence<? extends jfxc683a.Node>
 *     required: jfxc683a.Node
 *         content: [Node {}]
 *                  ^
 *     1 error
 * 
 * There doesn't seem to be a way to provide .EXPECTED files 
 * for tests that are expected to fail compilation.
 *
 */

class Node {
}

class Group extends Node {
    var content: Node;
}


Group {
    content: [Node {}]
} 
